--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
     "@types/superagent": "^4.1.7",
+    "acorn": "^7.1.1",
     "http-status-codes": "^1.4.0",
     "react": "^16.13.0",
     "react-device-detect": "^1.11.14",
